# foolnet

./: .gitignore  109.134c24fd.async.js  404.html  476.03f00301.async.js  476.112a68ba.async.js  476.9712c588.async.js  674.cc02df6b.async.js  82.5c34ef22.async.js  856.93f7b2d5.async.js  983.5b156df1.async.js  993.7468e4e7.async.js  993.fa23849a.async.js  LICENSE  README.md  build-manifest.json  docs__changelog.md.2455457b.async.js  docs__config__index.en-US.md.10a1b21f.async.js  docs__config__index.zh-CN.md.64cffaf1.async.js  docs__guide__index.en-US.md.4238baca.async.js  docs__guide__index.zh-CN.md.ca066cfe.async.js  docs__index.en-US.md.343139cf.async.js  docs__index.zh-CN.md.aa64501c.async.js  dumi__tmp-production__dumi__theme__ContextWrapper.d6a9ce87.async.js  index.html  main.py  nm__dumi-theme-antd-style__dist__layouts__DemoLayout__index.d07c85cb.async.js  nm__dumi-theme-antd-style__dist__layouts__DocLayout__index.d6c2a5a5.async.js  nm__dumi__dist__client__pages__404.9c5cc3f2.async.js  nm__dumi__dist__client__pages__Demo__index.afc4d813.async.js  package.json  pyproject.toml  ssr-antd.93a1d315.css  ssr-antd.dd0c4b5a.css  ssr-antd.e3a69411.css  ssr-css.1b0afa7e.css  ssr-css.2418c4ae.css  ssr-site.fd42fd35.css  umi.062b0c0c.js  umi.08e01e4b.js  umi.0bfed3c0.js  (+5 more)
-en/: index.html
changelog/: index.html
config/: index.html
config-en/: index.html
docs/: .dumirc.ts  package-lock.json  package.json
foolnet/: __init__.py  activation.py  layers.py  lossfn.py
foolnet-docs/: .dumirc.ts  README.md  package-lock.json  package.json
guide-en/: index.html
(+255 files in other folders)
