[tool.poetry]
name = "foolnet"
version = "0.1.2"
description = "A package designed for the newer about the Neural Network."
authors = ["lazypool <3416382833@qq.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.20.0"
matplotlib = ">=3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
